# Qdrant_Memory_MCP

./: README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
docs/: mcp-container-quickstart.md
scripts/: start_mcp_container.py  start_mcp_server.py
src/: generic_memory_service.py  mcp_container_launcher.py  mcp_server.py  server_config.py
src/handlers/: system_and_collections_handlers.py
src/memory/: embedding_service.py
