[tool.poetry]
name = "mcp-memory-server"
version = "0.1.0"
description = "MCP Server with Qdrant Vector Database Memory System for Cursor"
authors = ["Hannes <hannes@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
qdrant-memory-mcp = "src.mcp_container_launcher:main"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
mcp = "^1.13.1"
qdrant-client = "^1.7.0"
sentence-transformers = "^2.5.1"
numpy = "^1.26.0"
python-dotenv = "^1.0.0"
markdown = "^3.5.0"
beautifulsoup4 = "^4.12.0"
aiofiles = "^24.1.0"
pyyaml = "^6.0.0"
# UI dependencies (AutoGen-inspired)
PySide6 = "^6.7.0"        # Qt6 Python bindings for desktop UI
requests = "^2.32.1"      # For HTTP communication (fallback)
websockets = "^12.0"      # WebSocket client for real-time updates
aiohttp = "^3.9.1"      # Async HTTP client for MCP communication

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
types-markdown = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"